Vertically align the content of the grading table. Fixes #27

--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@
 
 #mod-peerwork-summary-table td {
     padding: 0px 20px;
+    vertical-align: middle;
 }
 
 #mod-peerwork-summary-table th {
